[RWD] fix for flex heading on smaller screens

--- a/css/new-style.scss
+++ b/css/new-style.scss
@@ -281,7 +281,9 @@ footer {
   text-align: left;
 
   &.row {
-      flex-wrap: nowrap;
+      @media screen and (min-width: 1030px){
+          flex-wrap: nowrap;
+      }
   }
 
   &--intro {
